<resources>
    <string name="app_name">Ecocash bills</string>
    <string name="pay">-- Pay --</string>
    <string name="substring_one">Ecocash</string>
    <string name="substring_two">bills</string>
    <string name="tagline">pay merchant, biller, ZESA, KWESE</string>
    <string name="zesa">ZESA</string>
    <string name="kwese">KWESE</string>
    <string name="tollgates">Toll Gates</string>
    <string name="merchant">Merchant</string>
    <string name="biller">Biller</string>
    <string name="fees">School Fees</string>
    <string name="tick">\u2605</string>
</resources>
